--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "react-native": "0.63.3",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-paper": "^4.7.2",
+    "react-native-phone-number-input": "^2.0.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
